@@ -1,6 +1,11 @@
+2002-12-14  James Henstridge  <james@daa.com.au>
+
+	* moduleinfo.py (gnome22.glimmer): depend on libgnomeprint-2.0
+	(gnome22.startup-notification): add libsnot.
+
 2002-12-13  Thomas Vander Stichele <thomas at apestaart dot org>
 
-        * moduleinfo.py  (gnome22): add nautilus-media.
+	* moduleinfo.py  (gnome22): add nautilus-media.
 
 2002-12-13  Daniel Elstner  <daniel.elstner@gmx.net>
 
